--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,16 @@ classifiers = [
 ]
 dependencies = [
     "numpy>=1.24.4",
-    "torch>=2.0.0",
+    "torch>=2.0.0,<2.4.0",
 ]
+
+[[tool.uv.index]]
+name = "pytorch-cu121"
+url = "https://download.pytorch.org/whl/cu121"
+explicit = true
+
+[tool.uv.sources]
+torch = { index = "pytorch-cu121" }
 
 [project.optional-dependencies]
 dev = [
