--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
 dependencies = [
     "numpy>=1.24.4",
     "torch>=2.0.0,<2.4.0",
+    "torchvision>=0.18.1",
 ]
 
 [[tool.uv.index]]
