--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,7 @@ venv.bak/
 # Project documentation (not tracked)
 CLAUDE.md
 ROADMAP.md
+ROADMAP-2.md
 
 # Research journal (not tracked)
 Journal/
