--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bittorch"
-version = "0.1.3"
+version = "0.1.5"
 description = "High-performance low-precision backend for PyTorch"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -49,3 +49,6 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
 addopts = "-v"
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
