feat(kernel): add packed CUDA kernel for TernaryLinearInference (v0.2.0)
Implements packed ternary GEMM kernel that reads 2-bit weights directly
without unpacking to full float/int8 tensors, achieving ~16x memory
reduction for inference.

Key changes:
- csrc/kernels/ternary_gemm_packed.cu: baseline + tiled CUDA kernels
  - Unpacks 4 weights per byte in registers
  - Uses add/sub instead of multiply for ternary accumulation
  - Supports FP16 and FP32 inputs
- csrc/core/dispatch.cpp: ternary_linear_packed_forward dispatch
- csrc/bindings/bittorch_bindings.cpp: Python bindings
- bittorch/ops/ternary_linear_packed.py: Python wrapper
- bittorch/nn/ternary_linear_infer.py: Uses CUDA kernel on GPU
- tests/test_packed_kernel.py: 36 comprehensive tests

This completes v0.2.0 milestone - packed inference with real memory savings.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bittorch"
-version = "0.1.5"
+version = "0.2.0"
 description = "High-performance low-precision backend for PyTorch"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -51,4 +51,9 @@ python_functions = ["test_*"]
 addopts = "-v"
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
 ]
